[package]
name = "moly-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moly-protocol = { path = "../moly-protocol" }
chrono = "0.4"
wasmedge-sdk = { version = "0.14.0", default-features = false, features = [
    "wasi_nn",
] }
log = "0.4.21"
env_logger = "0.11.5"

anyhow = "1.0"
serde_json = "1.0"
crossbeam = "0.8"
reqwest = { version = "0.11", features = ["blocking", "stream", "json"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = "1.0.197"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.30"
git2 = { version = "0.19.0", features = ["vendored-libgit2", "vendored-openssl"] }
