[package]
name = "moly-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moly-protocol = { path = "../moly-protocol" }
chrono = "0.4"
wasmedge-sdk = { version = "0.14.0", default-features = false, features = [
    "wasi_nn",
] }
log = "0.4.21"
env_logger = "0.11.5"

anyhow = "1.0"
serde_json = "1.0"
crossbeam = "0.8"
reqwest = { version = "0.11", features = ["blocking", "stream", "json"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = "1.0.197"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.30"
libra = { git = "https://github.com/Hou-Xiaoxuan/mega.git", branch = "libra-auth", package = "libra", features = ["p2p"]}
vault = { git = "https://github.com/web3infra-foundation/mega.git", branch = "main", package = "vault"}
gemini = { git = "https://github.com/web3infra-foundation/mega.git", branch = "main", package = "gemini"}
ring = "0.17.8"
hex = "0.4.3"
