[package]
name = "moly-kit"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
url = "2.4.10"
robius-open = "0.1.1"
sha2 = "0.10"
hex = "0.4"
async-stream = "0.3.6"

makepad-widgets = { git = "https://github.com/makepad/makepad", branch = "rik" }
makepad-code-editor = { git = "https://github.com/makepad/makepad", branch = "rik" }

reqwest = { version = "0.12.12", features = ["json", "stream"], optional = true }
scraper = { version = "0.23.1", optional = true }
serde = { version = "1.0.217", features = ["derive"], optional = true }
serde_json = { version = "1.0.135", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.43.0", features = ["full"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { version = "0.4.50", optional = true }

[features]
default = []
# default = ["full"]
json = ["dep:serde", "dep:serde_json"]
http = ["dep:reqwest", "dep:scraper"]
async-rt = ["dep:tokio"]
async-web = ["dep:wasm-bindgen-futures"]
full = ["default", "json", "async-rt", "async-web", "http"]
