[package]
name = "moly-kit"
version = "0.2.1"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.12", features = ["json", "stream", "rustls-tls"], default-features = false, optional = true }
scraper = { version = "0.23.1", optional = true }
serde = { version = "1.0.217", features = ["derive", "rc"], optional = true }
serde_json = { version = "1.0.135", optional = true }

futures = "0.3.31"
url = "2.4.10"
robius-open = "0.1.1"
async-stream = "0.3.6"

makepad-widgets = { git = "https://github.com/wyeworks/makepad", branch = "moly" }
makepad-code-editor = { git = "https://github.com/wyeworks/makepad", branch = "moly" }
cfg-if = "1.0.0"

log = "0.4"
env_logger = "0.11"
chrono = "0.4.41"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.43.0", features = ["full"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { version = "0.4.50", optional = true }

[features]
default = []
# default = ["full"]
json = ["dep:serde", "dep:serde_json"]
http = ["dep:reqwest", "dep:scraper"]
async-rt = ["dep:tokio"]
async-web = ["dep:wasm-bindgen-futures"]
full = ["default", "json", "async-rt", "async-web", "http"]
