[package]
name = "moly-mini"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
futures-core = "0.3.31"
makepad-widgets = { git = "https://github.com/makepad/makepad", branch = "rik" }
moly-kit = { path = "../moly-kit", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json", "stream"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.43.0", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.100"

