[package]
name = "moly-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
moly-kit = { path = "../moly-kit", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
# Crypto dependencies for encryption
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
base64 = "0.22"
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "signal"] }
tower-http = { version = "0.5", features = ["cors"] }
rand = "0.9.1"
