[package]
name = "moly-widgets"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"

makepad-widgets = { git = "https://github.com/makepad/makepad", branch = "rik" }
makepad-code-editor = { git = "https://github.com/makepad/makepad", branch = "rik" }

reqwest = { version = "0.12.12", features = ["json", "stream"], optional = true }
serde = { version = "1.0.217", features = ["derive"], optional = true }
serde_json = { version = "1.0.135", optional = true }
async-stream = "0.3.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.43.0", features = ["full"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { version = "0.4.50", optional = true }

[features]
default = []
# default = ["full"]
json = ["dep:serde", "dep:serde_json"]
http = ["dep:reqwest"]
async-rt = ["dep:tokio"]
async-web = ["dep:wasm-bindgen-futures"]
repos = ["json", "http"]
full = ["default", "json", "async-rt", "async-web", "repos", "http"]
