[package]
name = "moxin-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moxin-protocol = { path = "../moxin-protocol" }
chrono = "0.4"
wasmedge-sdk = { git = "https://github.com/WasmEdge/wasmedge-rust-sdk.git", rev = "1ef2434", default-features = false, features = [
    "wasi_nn",
] }
log = "0.4.21"
anyhow = "1.0"
serde_json = "1.0"
crossbeam = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
