[package]
name = "moxin-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moxin-protocol = { path = "../moxin-protocol" }
moxin-backend = { path = "../moxin-backend" }
## makepad-widgets = { git = "https://github.com/makepad/makepad", branch = "rik" }
makepad-widgets = { path = "../../makepad/widgets", version = "0.6.0" }
chrono = "0.4"
