[package]
name = "moxin-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moxin-protocol = { path = "../moxin-protocol" }

moxin-backend = { path = "../moxin-backend" }
moxin-fake-backend = { path = "./moxin-fake-backend", package="moxin-fake-backend" }

## makepad-widgets = { git = "https://github.com/makepad/makepad", branch = "rik" }
## makepad-widgets = { git = "https://github.com/jmbejar/makepad", branch = "moxin-changes" }
makepad-widgets = { path = "../../makepad/widgets", version = "0.6.0" }

chrono = "0.4"
unicode-segmentation = "1.10.1"
anyhow = "1.0"
