[package]
name = "moxin-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moxin-protocol = { path = "../moxin-protocol" }

moxin-backend = { path = "../moxin-backend" }
moxin-fake-backend = { path = "./moxin-fake-backend", package="moxin-fake-backend" }

makepad-widgets = { git = "https://github.com/makepad/makepad", branch = "rik" }

robius-open = { git = "https://github.com/project-robius/robius-open", rev = "b901523667d4a8bbb0bba3cd1ebcc0b94d33534e" }

chrono = "0.4"
unicode-segmentation = "1.10.1"
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0.197", features = ["derive"] }
