[package]
name = "moxin-runner"
version = "0.1.0"
edition = "2021"
description = "A companion app that runs before Moxin to handle wasmedge configuration and more"

[dependencies]
directories = "5.0.1"

[target.'cfg(windows)'.dependencies]
powershell_script = "1.1.0"

[[bin]]
name = "moxin"
path = "src/main.rs"

[features]
## Enable this feature when you are packaging Moxin into a macOS app bundle.
macos_bundle = []
