[package]
name = "egui-example"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.33"
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "glow",
    "x11",
] }
log = "0.4.27"
moly-kit = { path = "../..", features = ["full"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"
